[gd_scene load_steps=3 format=3 uid="uid://5pyec6hb233n"]

[ext_resource type="Script" uid="uid://cdolpayh8c3cc" path="res://scripts/work_scene.gd" id="1_fbnfj"]
[ext_resource type="Script" uid="uid://c5lnoqof6ijnt" path="res://scripts/number_grid.gd" id="2_x77gp"]

[node name="WorkScene" type="Node2D"]
script = ExtResource("1_fbnfj")

[node name="Numpad" type="Node2D" parent="."]

[node name="ConnectLine" type="Line2D" parent="Numpad"]
unique_name_in_owner = true
position = Vector2(100, 100)

[node name="NumberGrid" type="Node2D" parent="Numpad"]
unique_name_in_owner = true
position = Vector2(100, 100)
script = ExtResource("2_x77gp")
